--- a/vercel.json
+++ b/vercel.json
@@ -17,10 +17,7 @@
   },
   "functions": {
     "api/index.py": {
-      "includeFiles": [
-        "templates/**",
-        "static/**"
-      ]
+      "includeFiles": "{templates/**,static/**}"
     }
   }
 }
